# fuzzylogic

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE fuzzy.ipynb  CONTRIBUTING.md  Dockerfile  Fuzzy Playground.ipynb  LICENSE  META.stay  Neues Textdokument.txt  README.md  Showcase.ipynb  TODO-fuzzy  functions.py  fuzzylogic.code-workspace  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_functionality.py  test_fuzzy_functionality.py  test_fuzzy_units.py  test_units.py  truth.py
.box/: TEST fuzzy.ipynb  fuzzylogic_model.mdj  notizen für fuzzy logic and control
.box/version 1/: base.py  defuzzification.py  example1.py  fuzzification.py  hedges.py  inference.py  operators.py  optimizedbase.py  setmodifications.py  tools.py
.github/workflows/: docsupdater.yaml  docsupdater.yml
docs/: Showcase.ipynb  Tipping Problem.ipynb  ai workflow.md  api.md  conf.py  index.rst  mkdocs.yml  requirements.txt  usage.md
docs/docs/: Discussion.md  How-To.md  Showcase.md  classes.md  combinators.md  functions.md  hedges.md  index.md  rules.md  truth.md
docs/site/: 404.html  index.html  search.html  sitemap.xml
docs/source/: conf.py  index.rst
fuzzy/: classes.py  combinators.py  functions.py  hedges.py  rules.py  truth.py
fuzzylogic-0.1.1.post1/: setup.py
src/: CODE fuzzy.ipynb
src/fuzzylogic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: TEST fuzzy.ipynb  test_functionality.py  test_units.py
tests/: test.py  test_caro.py  test_defuzz.py  test_functionality.py  test_gui.py  test_singleton.py  test_units.py  thebariumoxide_test.py
(+23 files in other folders)
