[metadata]
name = fuzzylogic
version = attr: src.fuzzylogic.__version__
description = Fuzzy Logic for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
author = Anselm Kiefner
author_email = fuzzylogic@anselm.kiefner.de
license = MIT
url = https://github.com/amogorkon/fuzzylogic
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis
keywords = fuzzy logic

[options]
packages = find:
package_dir =
    = src
zip_safe = False
python_requires = >=3.12

[options.packages.find]
where = src

[options.extras_require]
plotting =
    matplotlib
numba =
    numba
